--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -177,7 +177,7 @@
         }
 
         .send-btn:hover {
-            background-color: #075E54;
+            background-color: black;
         }
 
         /* Login Form Styling */
